<resources>
    <string name="poster_url">http://image.tmdb.org/t/p/w150%s</string>
    <string name="poster_url_medium">http://image.tmdb.org/t/p/w300%s</string>
    <string name="poster_url_big">http://image.tmdb.org/t/p/w500%s</string>
    <string name="backdrop_url">http://image.tmdb.org/t/p/w500%s</string>

    <string name="app_name">Movie Lookup</string>
    <string name="about">About Movie Lookup</string>
    <string name="tmdb_attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="about_body">Movie Lookup is free and open source. This software is licensed under the MIT license.
        \n\n&#169; 2016 Jeffrey Ruder and Midori Bowen
        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
        \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
        \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>

    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_backdrop_image">Movie Backdrop Image</string>
    <string name="release_date">Release Date</string>
    <string name="numerical_rating">Numerical Rating</string>
    <string name="overview">Overview</string>
    <string name="posters">Posters</string>

    <string name="search_movies">Search movies…</string>
    <string name="no_results">No movies found</string>
    <string name="downloading_image">Downloading image…</string>
    <string name="failed_wallpaper">Failed to set image as wallpaper.</string>
    <string name="how_to_share">How do you want to share?</string>
    <string name="install_netflix">Please install the Netflix app!</string>

    <string name="saved_wallpaper">Successfully Set as Wallpaper</string>
    <string name="search_netflix">Search Netflix</string>
    <string name="share_button">Share Movie</string>

    <string name="search">Search</string>
    <string name="for_movies_by_name">for movies by name</string>
    <string name="share">Share</string>
    <string name="the_movies_you_find">the movies you find</string>
    <string name="save">Save</string>
    <string name="their_posters_as_wallpaper">their posters as wallpaper</string>
    <string name="github_link">View the code on GitHub</string>
    <string name="logo_for_tmdb">Logo for tMDB</string>

    <string name="searching">Searching</string>
    <string name="searching_for_movies">Searching for movies…</string>
    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="placeholder_text_movie_release_date">Movie Release Date</string>
    <string name="placeholder_text_movie_title">Star Wars: Episode V - The Empire Strikes Back</string>
    <string name="placeholder_text_overview_snippet">Overview Snippet...</string>

</resources>
