<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jtrmb.movietime.ui.MovieDetailFragment"
    android:orientation="vertical"
    android:background="@color/primaryLight">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:id="@+id/movieBackdropImageView"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_backdrop_image"
        android:adjustViewBounds="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movieInfoLayout"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/posterButtonLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:id="@+id/movieNameTextView"
                android:layout_alignParentStart="true"
                android:textSize="16sp"
                android:textColor="@color/primaryDark"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:id="@+id/releaseDateTextView"
                android:layout_below="@+id/movieNameTextView"
                android:layout_alignParentStart="true"
                android:textColor="@color/secondaryText"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numerical_rating"
                android:id="@+id/ratingTextView"
                android:textColor="@color/accent"
                android:textStyle="bold"
                android:layout_below="@+id/releaseDateTextView" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/posterButtonLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posters"
                android:id="@+id/posterButton"
                android:backgroundTint="@color/accent"
                android:enabled="false"
                android:visibility="gone" />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/detailBottomRow"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/scrollLinearLayout"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/overview"
                        android:id="@+id/overviewTextView"
                        android:textColor="@color/primaryText"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp" />


                </LinearLayout>

            </ScrollView>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/detailBottomRow"
            android:weightSum="1.0">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/share_button"
                android:id="@+id/shareButton"
                android:layout_weight="0.5"
                android:backgroundTint="@color/primaryDark"
                android:textColor="@color/icons"
                android:textSize="15sp" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/search_netflix"
                android:id="@+id/netflixButton"
                android:layout_weight="0.5"
                android:backgroundTint="@color/primaryDark"
                android:textColor="@color/icons"
                android:textSize="15sp" />

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>
