<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/primaryLight"
    tools:context="com.jtrmb.movietime.ui.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/aboutBottomRow"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_body"/>

    </ScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/aboutBottomRow"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_link"
            android:clickable="true"
            android:onClick="onClick"
            android:textColor="@color/primaryDark"
            android:id="@+id/githubLinkTextView"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tmdb_attribution"
            android:layout_marginBottom="6dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/poweredByImageView"
            android:clickable="true"
            android:onClick="onClick"
            />

    </LinearLayout>

</RelativeLayout>
