<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_material_light"
    android:paddingStart="4dp"
    android:paddingEnd="4dp" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="4dp"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="1dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="112.5dp"
                android:src="@drawable/lion"
                android:id="@+id/posterImage"
                android:layout_margin="8dp"
                android:contentDescription="@string/movie_poster_image" />

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/placeholder_text_movie_title"
                    android:id="@+id/movieTitle"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_text_movie_release_date"
                    android:id="@+id/movieReleaseDate"
                    android:layout_below="@+id/movieTitle"
                    android:layout_alignParentStart="true"
                    android:textSize="12sp" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/movieRatingBar"
                    android:numStars="5"
                    android:rating="3.8"
                    style="?android:attr/ratingBarStyleSmall"
                    android:progressTint="@color/accent"
                    android:isIndicator="true"
                    android:layout_below="@+id/movieReleaseDate"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/placeholder_text_overview_snippet"
                    android:id="@+id/overviewSnippet"
                    android:textSize="12sp"
                    android:layout_below="@+id/movieRatingBar"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>